--- a/app/views/hotels/new.html.erb
+++ b/app/views/hotels/new.html.erb
@@ -1,3 +1,16 @@
-<h1>Novo Hotel</h1>
-<%= render 'form', hotel: @hotel %>
-<%= link_to 'Voltar', hotels_path %>
+<% content_for :title, "Novo hotel" %>
+
+<div class="page-header">
+	<div class="stack-sm">
+		<span class="page-eyebrow"><i class="bi bi-plus-circle"></i> Cadastro</span>
+		<h1 class="page-header__title">Novo hotel</h1>
+		<p class="page-header__subtitle">Preencha as informações essenciais para incluir uma nova unidade boutique na plataforma.</p>
+	</div>
+	<div class="page-actions">
+		<%= link_to 'Voltar', hotels_path, class: "btn btn-outline-secondary" %>
+	</div>
+</div>
+
+<div class="surface-card surface-card--compact stack-md">
+	<%= render 'form', hotel: @hotel %>
+</div>
